--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,15 +15,34 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 0.8em;
   color: white;
 }
 
+.App-nav {
+    height: 40px;
+}
+
+.App-content {
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.App-main {
+    min-width: 90vw;
+    height: calc(100vh - 140px);
+    text-align: justify;
+}
+
+.App-a
 .App-link {
   color: #61dafb;
 }
