--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 0.8em;
+  font-size: 0.7em;
   color: white;
 }
 
@@ -37,7 +37,8 @@
 }
 
 .App-main {
-    min-width: 90vw;
+    width: 90%;
+    padding: 5px;
     height: calc(100vh - 140px);
     text-align: justify;
 }
@@ -54,4 +55,32 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+i.glyphicon { display: none; }
+.btn-add::after { content: 'Adicionar'; }
+.array-item-move-up::after { content: 'Subir'; }
+.array-item-move-down::after { content: 'Descer'; }
+.array-item-remove::after { content: 'Remover'; }
+
+input[type="text"].form-control { width: auto;}
+
+fieldset#root > div.form-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1px;
+}
+div.field-array {
+  margin-top: 20px;
+}
+div.array-item {
+  margin-top: 10px;
+}
+fieldset.field-array {
+  width: 100%;
+}
+span.required {
+  color: red;
 }
