--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,28 +25,27 @@
 }
 
 .App-nav {
-    height: 40px;
+  height: 40px;
 }
 
 .App-content {
-    width: 100vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-main {
-    width: 90%;
-    padding: 5px;
-    height: calc(100vh - 140px);
-    text-align: justify;
-    display: flex;
-    justify-content: space-around;
+  width: 90%;
+  padding: 5px;
+  height: calc(100vh - 140px);
+  text-align: justify;
+  display: flex;
+  justify-content: space-around;
 }
 
-.App-a
-.App-link {
+.App-a .App-link {
   color: #61dafb;
 }
 
@@ -59,19 +58,27 @@
   }
 }
 
-
-i.glyphicon { display: none; }
-.btn-add::after { content: 'Adicionar'; }
-.array-item-move-up::after { content: 'Subir'; }
-.array-item-move-down::after { content: 'Descer'; }
-.array-item-remove::after { content: 'Remover'; }
+i.glyphicon {
+  display: none;
+}
+.btn-add::after {
+  content: 'Adicionar';
+}
+.array-item-move-up::after {
+  content: 'Subir';
+}
+.array-item-move-down::after {
+  content: 'Descer';
+}
+.array-item-remove::after {
+  content: 'Remover';
+}
 
 form {
   width: 800px;
-  
 }
 
-.array-item .field-object{
+.array-item .field-object {
   border: 1px solid #c3c3c3;
   padding: 5px;
 }
@@ -98,9 +105,9 @@ fieldset {
   padding: 0;
   border: 0;
 }
-fieldset.field
-, fieldset#root
-, fieldset#root_eventLegalContextAppliedContainer {
+fieldset.field,
+fieldset#root,
+fieldset#root_eventLegalContextAppliedContainer {
   display: block;
   border: 1px solid #282c34;
   padding: 10px;
@@ -108,7 +115,7 @@ fieldset.field
 fieldset#root_eventLegalContextAppliedContainer {
   margin-top: 20px;
 }
-legend#root_eventAssociatedPeopleContainer__title{
+legend#root_eventAssociatedPeopleContainer__title {
   display: none !important;
 }
 fieldset > div.form-group {
@@ -117,12 +124,13 @@ fieldset > div.form-group {
   align-items: center;
   padding: 1px;
 }
-div.field-string > label, div.field-number > label {
+div.field-string > label,
+div.field-number > label {
   width: 200px;
 }
-input[type="text"].form-control
-, input[type="number"].form-control
-, textarea.form-control {
+input[type='text'].form-control,
+input[type='number'].form-control,
+textarea.form-control {
   width: 300px;
 }
 div.field-array {
